Fixed center-alignment of portfolio header.

--- a/css/ea.scss
+++ b/css/ea.scss
@@ -432,7 +432,7 @@ footer {
 	.portfolio-title {
   	display: inline-block;
 		max-width: 600px;
-		margin-bottom: ($spacing-unit * 4);
+		margin: 0 auto ($spacing-unit * 4) auto;
 		padding: 0 $spacing-unit*2;
 		text-align: center;
 	}
